package org.example;

//TIP To <b>Run</b> code, press <shortcut actionId="Run"/> or
// click the <icon src="AllIcons.Actions.Execute"/> icon in the gutter.
public class Main {
    static void main() {
        perro perro1 = new perro("caniche","permanente",1,"verde");
        perro perro2 = new perro();
        perro1.imprimirficha();







    }
}
