package org.example;

public class libreriaApp {
    static void main() {

        estudiante estudiante1 = new estudiante("alex", "45585545d", "1daw");
        estudiante estudiante2 = new estudiante("manuel", "54845614d", "1daw");
        estudiante estudiante3 = new estudiante("alvaro", "854845454d", "1daw");


    }
}
